--- a/project/test.html
+++ b/project/test.html
@@ -13,7 +13,7 @@
 </div>
 <center><div class="div_start">
   <h1>
-    MITAK TI SI 
+    MITAK 
     </h1>
 </div></center>
 <div class="div_water_polution">
