edit (wp, index)

--- a/project/water polution.html
+++ b/project/water polution.html
@@ -4,8 +4,24 @@
         </head>
         <body>
             <div class="topnav">
-                <a class="active" href="test.html">Home</a>
-              
-              </div>
+                <a class="active  " href="test.html">Home</a>
+                <a href="#wp1">Types of water polution</a>
+                <a  href="#wp2">Couses of water polution</a>
+                </div>
+               <center>
+                <div class="polaroid">
+                  <img src="wp1.jpg" alt="5 Terre" style="width:100%">
+                  <div class="container">
+                  <p id="wp1" >Types of water polution</p>
+                  </div>
+                </div>
+                
+                <div class="polaroid">
+                  <img src="wp2.jpg" alt="Norther Lights" style="width:100%">
+                  <div class="container">
+                  <p id="wp2">Couses of water polution</p>
+                  </div>
+                </div>
+              </center>
             </body>
     </html>
