--- a/project/index.html
+++ b/project/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="test.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 
