--- a/project/water polution.html
+++ b/project/water polution.html
@@ -4,7 +4,7 @@
         </head>
         <body>
             <div class="topnav">
-                <a class="active  " href="test.html">Home</a>
+                <a class="active  " href="index.html">Home</a>
                 <a href="#wp1">Types of water polution</a>
                 <a  href="#wp2">Couses of water polution</a>
                 </div>
