--- a/project/water saving.html
+++ b/project/water saving.html
@@ -4,7 +4,7 @@
         </head>
         <body>
             <div class="topnav">
-                <a class="active" href="test.html">Home</a>
+                <a class="active" href="index.html">Home</a>
               
               </div>
             </body>
