--- a/project/index.html
+++ b/project/index.html
@@ -9,7 +9,7 @@
   <a class="active" href="#home">Home</a>
   <a href="#wp">Water polution</a>
   <a href="#wc">Water cleaning</a>
-  <a href="about us.html">About Us</a>
+  <a href="about.html">About Us</a>
 </div>
 <center><div class="div_start">
   <h1>
