--- a/project/about.html
+++ b/project/about.html
@@ -32,7 +32,7 @@
   <div class="column">
     <div class="card">
       <div class="image">
-      <img src="mita4e.jpg" alt="Dimitar" style="width:97%" >
+      <img src=".jpg" alt="Dimitar" style="width:97%" >
     </div>
       <div class="container">
         <h2>Dimitar Georgiev</h2>
