add (wind pollution)

--- a/project/index.html
+++ b/project/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -9,6 +9,8 @@
   <a class="active" href="#home">Home</a>
   <a href="#wp">Water polution</a>
   <a href="#wc">Water cleaning</a>
+  <a href="#windp">Water cleaning</a>
+  <a href="#winds">Water cleaning</a>
   <a href="about.html">About Us</a>
 </div>
 <center><div class="div_start">
@@ -61,5 +63,11 @@
   <p>MITA4e</p>
  <a id="wc">  <a href="water saving.html">Read More</a>
 </div>
-
+</div>
+<div class="div_wind_pollution">
+  <h3>How we can help to clean</h3>
+                            
+  <p>MITA4e</p>
+ <a id="windp">  <a href="wind pollution.html">Read More</a>
+</div>
 </body>
