--- a/project/about.html
+++ b/project/about.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="outcssabout.css">
+<link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <body>
   <div class="topnav">
     <a href="index.html">Home</a>
-    <a href="#wp">Water polution</a>
-    <a href="#wc">Water cleaning</a>
     <a class="active" href="#">About Us</a>
   </div>
 <br>
@@ -23,7 +21,6 @@
         <h2>Mario Slavov</h2>
         <p class="title">Developer</p>
         <strong><p>Worked on the code of the website.</p>
-        <p class="mail">MNSlavov18@codingburgas.bg</p></strong>
         <p><button class="button">Read More</button></p>
       </div>
     </div>
@@ -38,7 +35,6 @@
         <h2>Dimitar Georgiev</h2>
         <p class="title">Designer</p>
         <strong><p>Worked on the design of the website.</p>
-        <p class="mail">DMGeorgiev18@codingburgas.bg</p></strong>
         <p><button class="button">Read More</button></p>
       </div>
     </div>
@@ -51,7 +47,6 @@
         <h2>Stoqn Ponchev</h2>
         <p class="title">Text Editor and Manager</p>
         <strong><p>Worked on the text and the presentation for the website.</p>
-        <p class="mail">SMPonchev18@codingburgas.bg</p></strong>
         <p><button class="button">Read More</button></p>
       </div>
     </div>
