--- a/project/water pollution/Types of water polution/Types of water polution.html
+++ b/project/water pollution/Types of water polution/Types of water polution.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="Couses of water polution.css">
+        <link rel="stylesheet" type="text/css" href="Types of water polution.css">
         </head>
         <body>
             <div class="topnav">
