--- a/project/water pollution/water polution.html
+++ b/project/water pollution/water polution.html
@@ -12,14 +12,14 @@
                 <div class="polaroid">
                   <img src="wp1.jpg" alt="5 Terre" style="width:100%">
                   <div class="container">
-                  <p id="wp1" ><a href="">Types of water polution</a></p>
+                  <p id="wp1" ><a href="Types of water polution/Types of water polution.html">Types of water polution</a></p>
                   </div>
                 </div>
                 
                 <div class="polaroid">
                   <img src="wp2.jpg" alt="Norther Lights" style="width:100%">
                   <div class="container">
-                  <p id="wp2">Couses of water polution</p>
+                  <p id="wp2"><a href="Couses of water polution/Couses of water polution.html">Couses of water polution</a></p>
                   </div>
                 </div>
               </center>
