--- a/project/index.html
+++ b/project/index.html
@@ -74,6 +74,6 @@
   <h3>How we can help to clean</h3>
                             
   <p>MITA4e</p>
- <a id="windp">  <a href="wind saving.html">Read More</a>
+ <a id="winds">  <a href="wind saving.html">Read More</a>
 </div>
 </body>
