--- a/project/about/about.html
+++ b/project/about/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="topnav">
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <a class="active" href="#">About Us</a>
   </div>
 <br>
@@ -29,7 +29,7 @@
   <div class="column">
     <div class="card">
       <div class="image">
-      <img src=".jpg" alt="Dimitar" style="width:97%" >
+      <img src="Dimitar2.jpg" alt="Dimitar" style="width:100%" >
     </div>
       <div class="container">
         <h2>Dimitar Georgiev</h2>
@@ -42,7 +42,7 @@
  
   <div class="column">
     <div class="card">
-      <img src=".jpg" alt="Stoqn" style="width:100%">
+      <img src="Stoqn.jpg" alt="Stoqn" style="width:100%">
       <div class="container">
         <h2>Stoqn Ponchev</h2>
         <p class="title">Text Editor and Manager</p>
