--- a/project/index.html
+++ b/project/index.html
@@ -11,7 +11,7 @@
   <a href="#wc">Water cleaning</a>
   <a href="#windp">Water cleaning</a>
   <a href="#winds">Water cleaning</a>
-  <a href="about.html">About Us</a>
+  <a href="about/about.html">About Us</a>
 </div>
 <center><div class="div_start">
   <h1>
@@ -61,7 +61,7 @@
   <h3>How we can help to clean</h3>
                             
   <p>MITA4e</p>
- <a id="wc">  <a href="water saving.html">Read More</a>
+ <a id="wc">  <a href="water saving/water saving.html">Read More</a>
 </div>
 </div>
 <div class="div_wind_pollution">
