edit (couses of water polution)

--- a/project/water pollution/Couses of water polution/Couses of water polution.html
+++ b/project/water pollution/Couses of water polution/Couses of water polution.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="Couses of water polution.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
         <body>
             <div class="topnav">
                 <a class="active" href="../../index.html">Home</a>
                 <a  href="../water polution.html">Water Pollution</a>
               </div>
+
             </body>
     </html>
