--- a/project/water pollution/Types of water polution/Types of water polution.html
+++ b/project/water pollution/Types of water polution/Types of water polution.html
@@ -7,5 +7,23 @@
                 <a class="active" href="../../index.html">Home</a>
                 <a  href="../water polution.html">Water Pollution</a>
               </div>
+              <div class="div_c">
+                <img src="cw1.jpg" >  
+                <h1 class="h1">Chemical Water Pollution</h1>
+                <p>Industrial and agricultural work involves the use of many different
+                  chemicals that can run-off<br> into water and pollute it.
+                  Metals and solvents from industrial work can pollute rivers and lakes.
+                  <br>These are poisonous to many forms of aquatic life and may slow their 
+                  development, make them infertile or even result in death.<br><br>
+                  Pesticides are used in farming to control weeds, insects and fungi.
+                  Run-offs of these pesticides can cause <br>water pollution and poison aquatic life.
+                   Subsequently, birds, humans and other animals may be poisoned if they
+                    eat infected fish.<br><br>Petroleum is another form of
+                   chemical pollutant that usually contaminates water through oil spills when a 
+                   ship ruptures.<br> Oil spills usually have only a localised affect on wildlife 
+                   but can spread for miles.<br> The oil can cause the death of many fish and stick to 
+                   the feathers of seabirds causing them to lose the ability to fly.</p>
+               
+                </div>
             </body>
     </html>
