--- a/project/water pollution/Types of water polution/Types of water polution.html
+++ b/project/water pollution/Types of water polution/Types of water polution.html
@@ -25,5 +25,42 @@
                    the feathers of seabirds causing them to lose the ability to fly.</p>
                
                 </div>
+                <div class="div_c2">
+                  <img src="tw1.jpg">
+<h1>Oil Pollution</h1>
+                   <p>Everyday, oceans are heavily polluted with oils derived from oil spills, 
+                    dumping, run-offs, and shipping.<br> In fact, an estimated 706 million gallons 
+                    of waste-oil enters the ocean each year.<br><br> As the oil is not able to dissolve 
+                    in water, it develops into a thick sludge that harms fish, affects marine birds, 
+                    and blocks light to aquatic plants.<br> These oils can also contaminate water for 
+                    drinking and other purposes. <br><br>As oil cleanup can be a long and expensive process, 
+                    cleaning water that has been contaminated with oil is simply not an option. <br>
+                    This means men, women, and children in less privileged countries are forced to 
+                    use polluted water to drink, bathe, and cook.<p>
+              
+                    </div>
+<div class="div_c3">
+  <img src="tw2.jpg">
+  <h1>Plastics</h1>
+  <p>Today, plastics are used in all types of manufacturing ranging from the production 
+    of clothing to car parts. As plastic is lightweight, <br>it is often washed away into
+     rivers and oceans. <br><br>Plastic is also non-biodegradable, meaning it can last for decades
+      while presenting a danger to marine animals. <br>Modern plastics also contain harmful
+       chemicals that can seep into the water over time. Some types of plastic contain
+        bisphenol. </p>
+</div>
+<div class="div_c2">
+  <img src="tw3.jpg">
+  <h1>Radioactive Waste</h1>
+  <p>Exposure to radiation increases the risk of damage to cells, tissues, and DNA.
+     Long-term exposure can result in serious issues like cancers, birth defects,
+      leukemia,<br> genetic mutations, and immune and endocrine system disorders.<br><br>
+       When factories release radioactivity into the air, soil, and water, it can 
+       cause these problems and more in people who come into contact with the 
+       radioactive waste. Radioactive waste can also last for many centuries
+        making cleanup a major challenge. <br><br>If radioactive waste is not 
+        disposed of properly, contaminants can spread to groundwater and surface 
+        water.</p>
+  </div>
             </body>
     </html>
