edit index, water saving, water pollution

--- a/project/water pollution/water polution.html
+++ b/project/water pollution/water polution.html
@@ -9,17 +9,17 @@
                 <a  href="#wp2">Couses of water polution</a>
                 </div>
                <center>
-                <div class="polaroid">
+                <a id="wp1" ></a> <div class="polaroid">
                   <img src="wp1.jpg" alt="5 Terre" style="width:100%">
                   <div class="container">
-                  <p id="wp1" ><a href="Types of water polution/Types of water polution.html">Types of water polution</a></p>
+                  <a href="Types of water polution/Types of water polution.html">Types of water polution</a></a>
                   </div>
                 </div>
                 
-                <div class="polaroid">
+                <a id="wp2" ></a> <div class="polaroid">
                   <img src="wp2.jpg" alt="Norther Lights" style="width:100%">
                   <div class="container">
-                  <p id="wp2"><a href="Couses of water polution/Couses of water polution.html">Couses of water polution</a></p>
+                  <a href="Couses of water polution/Couses of water polution.html">Couses of water polution</a></p>
                   </div>
                 </div>
               </center>
