--- a/project/about/about.html
+++ b/project/about/about.html
@@ -6,8 +6,7 @@
 </head>
 <body>
   <div class="topnav">
-    <a href="../index.html">Home</a>
-    <a class="active" href="#">About Us</a>
+    <a class="active" href="../index.html">Home</a>
   </div>
 <br>
 <br>
