edit href(water saving)

--- a/project/index.html
+++ b/project/index.html
@@ -34,7 +34,7 @@
     <img src="in2.jpg">
     <h1>How to prevent water pollution?</h1>                      
     <h3>If you want to help keep our waters clean, there are many things you can do to help. You can prevent water pollution of nearby rivers and lakes as well as groundwater and drinking water by following some simple guidelines in your everyday life.</h3>
-    <a href="wind saving/wind saving.html">Read More</a>
+    <a href="water saving/water saving.html">Read More</a>
   </div>
 
   <a id="windp"></a><div class="div_c3">
