--- a/project/water pollution/Types of water polution/Types of water polution.html
+++ b/project/water pollution/Types of water polution/Types of water polution.html
@@ -4,8 +4,8 @@
         </head>
         <body>
             <div class="topnav">
-                <a class="active" href="../../index.html">Home</a>
-                <a  href="../water polution.html">Water Pollution</a>
+                <a href="../../index.html">Home</a>
+                <a class="active"  href="../water polution.html">Water Pollution</a>
               </div>
               <div class="div_c">
                 <img src="cw1.jpg" >  
