--- a/project/index.html
+++ b/project/index.html
@@ -24,8 +24,8 @@
     What is water polution?
     </h1>
     <h3>
-      Water pollution occurs when harmful <br>substances—often chemicals or microorganisms—contaminate<br> a stream, river, lake, ocean,
-      aquifer, or other body of water<br>, degrading water quality and rendering it toxic to humans or the environment.
+      Water pollution occurs when harmful substances—often chemicals or microorganisms—contaminate a stream, river, lake, ocean,
+      aquifer, or other body of water,degrading water quality and rendering it toxic to humans or the environment.
       </h3>
     
 <a href="water pollution/water polution.html">Read More</a>
