--- a/project/water pollution/Couses of water polution/Couses of water polution.html
+++ b/project/water pollution/Couses of water polution/Couses of water polution.html
@@ -5,8 +5,8 @@
         </head>
         <body>
             <div class="topnav">
-                <a class="active" href="../../index.html">Home</a>
-                <a  href="../water polution.html">Water Pollution</a>
+                <a  href="../../index.html">Home</a>
+                <a class="active" href="../water polution.html">Water Pollution</a>
               </div>
             <div class="responsive">
                 <div class="gallery">
