--- a/project/index.html
+++ b/project/index.html
@@ -46,7 +46,7 @@
       Air pollution occurs when harmful or excessive quantities of substances are introduced into Earth's atmosphere. Sources of air pollution include gases, particulates, and biological molecules. It may cause diseases, allergies and even death to humans; it may also cause harm to other living organisms such as animals and food crops, and may damage the natural or built environment. Both human activity and natural processes can generate air pollution.
       </h3>
     
-<a href="wind pollution/wind pollutio.html">Read More</a>
+<a href="wind pollution/wind pollution.html">Read More</a>
   </div>
   <a id="winds"></a><div class="div_c4">
     <img src="in4.png">
