--- a/project/water pollution/water polution.html
+++ b/project/water pollution/water polution.html
@@ -12,7 +12,7 @@
                 <a id="wp1" ></a> <div class="polaroid">
                   <img src="wp1.jpg" alt="5 Terre" style="width:100%">
                   <div class="container">
-                  <a href="Types of water polution/Types of water polution.html">Types of water polution</a></a>
+                  <a href="Types of water polution/Types of water polution.html">Types of water polution</a>
                   </div>
                 </div>
                 
