--- a/project/air pollution/Types of air polution/Types of air polution.html
+++ b/project/air pollution/Types of air polution/Types of air polution.html
@@ -5,7 +5,7 @@
         <body>
             <div class="topnav">
                 <a href="../../index.html">Home</a>
-                <a class="active"  href="../wind pollution.html">Air Pollution</a>
+                <a class="active"  href="../air pollution.html">Air Pollution</a>
               </div>
               <div class="div_c">
                 <img src="ta1.jpg" >  
