--- a/project/index.html
+++ b/project/index.html
@@ -28,7 +28,7 @@
       aquifer, or other body of water,degrading water quality and rendering it toxic to humans or the environment.
       </h3>
     
-<a href="water pollution/water polution.html">Read More</a>
+<a href="water pollution/water pollution.html">Read More</a>
   </div>
  <a id="wc"> </a><div class="div_c2">
     <img src="in2.jpg">
@@ -46,13 +46,13 @@
       Air pollution occurs when harmful or excessive quantities of substances are introduced into Earth's atmosphere. Sources of air pollution include gases, particulates, and biological molecules. It may cause diseases, allergies and even death to humans; it may also cause harm to other living organisms such as animals and food crops, and may damage the natural or built environment. Both human activity and natural processes can generate air pollution.
       </h3>
     
-<a href="wind pollution/wind pollution.html">Read More</a>
+<a href="air pollution/air pollution.html">Read More</a>
   </div>
   <a id="winds"></a><div class="div_c4">
     <img src="in4.png">
         <h1>How to prevent air pollution?</h1>                      
     <h3>When you think of air pollution, you most likely don’t conjure up images of the inside of your home or office. But because we spend so much time indoors — especially in colder weather — keeping the air quality as clean as possible in your home, car and workplace is important for your health.</h3>
-    <a href="wind saving/wind saving.html">Read More</a>
+    <a href="air saving/air saving.html">Read More</a>
   </div>
 </body>
 </html>
