--- a/project/water pollution/Couses of water polution/Couses of water polution.html
+++ b/project/water pollution/Couses of water polution/Couses of water polution.html
@@ -6,7 +6,7 @@
         <body>
             <div class="topnav">
                 <a  href="../../index.html">Home</a>
-                <a class="active" href="../water polution.html">Water Pollution</a>
+                <a class="active" href="../water pollution.html">Water Pollution</a>
               </div>
             <div class="responsive">
                 <div class="gallery">
