--- a/project/water pollution/water pollution.html
+++ b/project/water pollution/water pollution.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="water polution.css">
+        <link rel="stylesheet" type="text/css" href="water pollution.css">
         </head>
         <body>
             <div class="topnav">
-                <a class="active  " href="../index.html">Home</a>
+                <a  href="../index.html">Home</a>
                 <a href="#wp1">Types of water polution</a>
                 <a  href="#wp2">Couses of water polution</a>
                 </div>
