--- a/project/air pollution/Couses of air polution/Couses of air polution.html
+++ b/project/air pollution/Couses of air polution/Couses of air polution.html
@@ -6,7 +6,7 @@
         <body>
             <div class="topnav">
                 <a  href="../../index.html">Home</a>
-                <a class="active" href="../wind pollution.html ">Water Pollution</a>
+                <a class="active" href="../air pollution.html ">Air Pollution</a>
               </div>
             <div class="responsive">
                 <div class="gallery">
