--- a/project/air pollution/air pollution.html
+++ b/project/air pollution/air pollution.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="wind pollution.css">
+        <link rel="stylesheet" type="text/css" href="air pollution.css">
         </head>
         <body>
             <div class="topnav">
