--- a/project/water pollution/Types of water polution/Types of water polution.html
+++ b/project/water pollution/Types of water polution/Types of water polution.html
@@ -5,7 +5,7 @@
         <body>
             <div class="topnav">
                 <a href="../../index.html">Home</a>
-                <a class="active"  href="../water polution.html">Water Pollution</a>
+                <a class="active"  href="../water pollution.html">Water Pollution</a>
               </div>
               <div class="div_c">
                 <img src="cw1.jpg" >  
