--- a/project/water saving/water saving.html
+++ b/project/water saving/water saving.html
@@ -1,11 +1,48 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="water saving.css">
-        </head>
-        <body>
-            <div class="topnav">
-                <a class="active" href="../index.html">Home</a>
-              
-              </div>
-            </body>
-    </html>
+      <link rel="stylesheet" type="text/css" href="water saving.css">
+    </head>
+     <body>
+        <div class="topnav">
+          <a  href="../index.html">Home</a>
+          <a class="active"href="">Water Saving</a>
+        </div>
+        <div class="ws">
+          <img src="wwt.jpg">
+          <h1>Wastewater treatment</h1>
+          <p>Wastewater treatment consists of removing pollutants from wastewater through a physical,<br>
+            chemical or biological process. The more efficient these processes are,<br>
+            the cleaner the water becomes.</p>
+        </div>
+        <div class="ws2">
+          <img src="ga.jpg">
+          <h1>Green agriculture</h1>
+          <p>Globally, agriculture accounts for 70% of water resources, so it is essential to have climate-friendly crops,<br>
+            efficient irrigation that reduces the need for water and energy-efficient food production.<br>
+            Green agriculture is also crucial to limit the chemicals that enter the water.</p>
+        </div>
+        <div class="ws3">
+          <img src="swm.jpg">
+          <h1>Stormwater management</h1>
+          <p>“Stormwater management is the effort to reduce runoff of rainwater or melted snow into streets,<br>
+            lawns and other sites and the improvement of water quality” according to the US Environmental Protection<br>
+            Agency (EPA). It is important to avoid pollutants from contaminating <br>
+            the water and helps to use water more efficiently.</p>
+        </div>
+        <div class="ws4">
+          <img src="pwr.jpg">
+          <h1>Plastic waste reduction </h1>
+          <p>80% of plastic in our oceans is from land sources. In order to reduce the amount of plastic <br>
+            entering our ocean, we need to both reduce our use of plastic globally,<br>
+             and to improve plastic waste management.</p>
+        </div>
+        <div class="ws3">
+          <img src="wc.jpg">
+          <h1> Water conservation </h1>
+          <p>Without water conservation, we won’t go very far. It is central in making sure the <br>
+            world has better access to clean water. It means being aware that <br>
+            water is a scarce resource, taking care of it accordingly,<br>
+            and managing it responsibly.</p>
+        </div>
+    </body>
+</html>
